[package]
name = "tx-per-month"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.0"
mongodb = "2.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4.22"